MIC-19: Prepare basic gorm drivers
